# docs/swagger.json
@@ -156,6 +156,29 @@
                 }
             }
         },
+        "/order": {
+            "get": {
+                "description": "Mengambil semua data order.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Get All Data Order.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Order"
+                        }
+                    }
+                }
+            }
+        },
         "/update/{id}": {
             "put": {
                 "description": "Ubah data ayam.",
@@ -235,6 +258,26 @@
                 "umur": {
                     "type": "string",
                     "example": "123456789"
+                }
+            }
+        },
+        "controller.Order": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "alamat": {
+                    "type": "string"
+                },
+                "ayam": {
+                    "$ref": "#/definitions/controller.Ayam"
+                },
+                "nama_pemesan": {
+                    "type": "string"
+                },
+                "tanggal_pemesanan": {
+                    "type": "string"
                 }
             }
         },
